ONIE password support example, using kvm_x86_64
If the kvm target is built with SECURE_BOOT_EXT true,
a username and password will be required for login.

For UEFI BIOS systems, the password/login will only be
required if Secure Boot is active.

This commit defaults the kvm_x86_64 virtual machine to:
Login: root
Password: onie

If Secure Boot is NOT enabled, the user will be automatically
logged in as root.

Details:
---------

New files
----------
   machine/kvm_x86_64/rootconf/sysroot-etc/passwd-open
     - passwd file configured for root login, no password
   machine/kvm_x86_64/rootconf/sysroot-etc/passwd-secured
     - passwd file configured for root login, passwd: onie
	   Note that the hash for the password has to be generated,
	   and pasted in
   machine/kvm_x86_64/rootconf/sysroot-init/open-system
     - startup script to enable/disable login if secure boot set,
	   Toggles between passwd-open and passwd-secured
   machine/kvm_x86_64/rootconf/sysroot-rcS/S12open-system
     - softlink to open-system

Build time
-----------
If SECURE_BOOT_EXT  - the secure boot extensions option
is enabled, then the ONIE password will be built in.

The password file used is copied from
machine/<manufacturer/<target>/rootconf/sysroot-etc/passwd-secured
to replace /etc/passwd in the following locations:
Rescue CD:
 /mnt/onie-boot/onie/config/etc/passwd
 /etc/passwd

Demo OS
 /etc/passwd

The machine install-platform file can override the
set_default_passwd() function in onie/installer/install.sh
to set a password on a per-machine basis.

Run time
---------

The open-system startup script will detect if the
Secure Boot UEFI variable is set or not.
If set, it sets softlinks to:
/bin/onie-console-secure
/mnt/onie-boot/onie-config/etc/passwd
(unless this is a recovery iso, in which case it
does nothing )

If Secure Boot is NOT enabled, links go to
/bin/onie-console-open
/etc/passwd-open

The resulting behavior is that, if Secure Boot is set,
the user is prompted for a login/passwo

--- a/build-config/Makefile
+++ b/build-config/Makefile
@@ -346,6 +346,9 @@ ONIE_MIRROR	?= http://mirror.opencompute.org/onie
 # By default do not enable secure boot
 SECURE_BOOT_ENABLE ?= no
 
+# Secure boot extended enables ONIE password, so far
+SECURE_BOOT_EXT ?= no
+
 ifeq ($(SECURE_BOOT_ENABLE),yes)
   SHIM_ENABLE = yes
   PESIGN_ENABLE = yes
@@ -443,6 +446,11 @@ endif
 
 ifeq ($(KEYUTILS_ENABLE),yes)
   include make/keyutils.make
+endif
+
+ifeq ($(SECURE_BOOT_EXT),yes)
+# Secure Boot is a pre requisite for secure boot extended
+    SECURE_BOOT_ENABLE = yes
 endif
 
 ifeq ($(SECURE_BOOT_ENABLE),yes)
