Secure GRUB - password and file signature checking.
Summary
--------
 This adds the requirement of a login/password to alter GRUB,
 and GRUB will validate files it loads against detached signatures
 before loading them.

 These changes only apply if built with SECURE_GRUB enabled, and
 if ONIE is installed on a UEFI BIOS system.

 GRUB file validation can be disabled by disabling Secure Boot
 in the BIOS, but GRUB will still ask for a password/login.

Details
--------
 The minimal changes to the user experience could imply that
 the code changes were equally minimal.

 This could not be further from the truth, as there is
 _quite_ a lot going on here, with code changes complicated
 by the need for externally supplied configuration and keys.
 So there are build infrastructure changes here, in addition
 to new code.

 Let's take a look at these changes on a per-context basis.

Build time
-----------
 The SECURE_GRUB define depends on SECURE_BOOT and
 SECURE_BOOT_EXT (extended secure boot) being set
 in the machine.make makefile

Keys:
-----
 Grub uses GPG to generate signatures, so a public and
 a private GPG keyring are required for build.

 The onie-encrypt.sh script can generate these keys if
 invoked as:
  'make MACHINE=<machine target> signing-keys-generate'
 This will put demonstration keys under:
  onie/encrypt/machines/< machine target>/keys.
 The machine target's machine-security.make makefile can
  then be used to reference these keys.
 The KVM target will automatically use the default key
  locations generated by building 'signing=keys-generate'

 If you are building the KVM virtual machine, running
  'make MACHINE=kvm_x86_64 signing-keys-install'
  ...will copy the keys to the virutal USB drive the
  emulation uses, to be available for install into
  the virutal UEFI BIOS.

Passwords
----------
 The Grub login and password are set in the target system's
 machine-securiy.make file. A password hash, generated by
 grub-mkpasswd-pbkdf2 can also be supplied if 

--- a/build-config/Makefile
+++ b/build-config/Makefile
@@ -349,6 +349,11 @@ SECURE_BOOT_ENABLE ?= no
 # Secure boot extended enables ONIE password, so far
 SECURE_BOOT_EXT ?= no
 
+# If yes, enable the following for GRUB
+# - grub file verification with detached signatures
+# - grub password protection.
+SECURE_GRUB ?= no
+
 ifeq ($(SECURE_BOOT_ENABLE),yes)
   SHIM_ENABLE = yes
   PESIGN_ENABLE = yes
@@ -465,6 +470,28 @@ ifeq ($(SECURE_BOOT_ENABLE),yes)
 # doing developer or release builds.
   include $(MACHINE_SECURITY_MAKEFILE)
 
+
+# If initrd verification included, check key variables
+# This uses gpg keys, which Secure Boot doesn't.
+  ifeq ($(SECURE_BOOT_EXT),yes)
+# Secure Boot is a pre requisite for secure grub
+    ifeq ($(SECURE_GRUB),yes)
+      GENERATE_KEYS_MSG = " check the $(MACHINE_SECURITY_MAKEFILE) file."
+# Validate GPG keys used by GRUB
+      ifeq ($(GPG_SIGN_PUBRING),)
+        $(error GPG_SIGN_PUBRING key location is not set. Disable SECURE_GRUB or $(GENERATE_KEYS_MSG))
+      endif
+      ifeq ($(GPG_SIGN_SECRING),)
+        $(error GPG_SIGN_SECRING key location is not set. Disable SECURE_GRUB or $(GENERATE_KEYS_MSG))
+      endif
+# Validate password for GRUB
+      ifeq ($(GRUB_PASSWD_PLAINTEXT),)
+        ifeq ($(GRUB_PASSWD_HASHED),)
+          $(error GRUB_PASSWD_PLAINTEXT or GRUB_PASSWD_HASHED are not set - $(GENERATE_KEYS_MSG))
+        endif
+      endif
+    endif
+  endif
 endif
 
 # Note that the Shim include must follow the machine-security.make
