--- a/installer/grub-arch/grub/grub-common.cfg
+++ b/installer/grub-arch/grub/grub-common.cfg
@@ -1,5 +1,6 @@
 ## Begin grub-common.cfg
 
+#  Copyright (C) 2021 Andriy Dobush <andriyd@nvidia.com>
 #  Copyright (C) 2014,2018 Curt Brune <curt@cumulusnetworks.com>
 #  Copyright (C) 2015,2016,2017 david_yang <david_yang@accton.com>
 #
@@ -103,7 +104,8 @@ function reset_onie_mode {
 }
 
 # Load environment variables
-load_env
+# Use --skip-sig to allow booting of preconfigured options.
+load_env --skip-sig
 
 # The default GRUB boot entry is controlled by two persistent grub
 # environment variables, "onie_mode" and "onie_nos_mode".  If
@@ -138,27 +140,28 @@ else
    fi
 fi
 
-menuentry "$onie_menu_install" {
+# --unrestricted = useable without a password
+menuentry "$onie_menu_install" --unrestricted {
   onie_debugargs=""
   onie_install
 }
 
-menuentry "$onie_menu_rescue" {
+menuentry "$onie_menu_rescue" --unrestricted {
   onie_debugargs=""
   onie_rescue
 }
 
-menuentry "$onie_menu_uninstall" {
+menuentry "$onie_menu_uninstall" --unrestricted {
   onie_debugargs=""
   onie_uninstall
 }
 
-menuentry "$onie_menu_update" {
+menuentry "$onie_menu_update" --unrestricted {
   onie_debugargs=""
   onie_update
 }
 
-menuentry "$onie_menu_embed" {
+menuentry "$onie_menu_embed" --unrestricted {
   onie_debugargs=""
   onie_embed
 }
