Makefile - add make system-download-cache-update
This provides an easy way to add already downloaded
packages to a system build cache, where they will
survive a 'make distclean'.

The assumption is that users will only need a subset
of all possible packages used by ONIE, and they can
copy them to a directory on the build system as
they go.

Note that the DUE containers auto mount the host's
/var/cache/onie/download directory if it is present,
so the cache will persist between container runs if
updated within the container.

It also has the reminder to build with:
 ONIE_USE_SYSTEM_DOWNLOAD_CACHE=TRUE
to access the cache rather than trying to download
over the network.

Signed-off-by: Alex Doyle <adoyle@nvidia.com>

--- a/build-config/Makefile
+++ b/build-config/Makefile
@@ -592,6 +592,18 @@ debian-prepare-build-host:
 
 PHONY += ldd
 
+# Store already downloaded packges on the build system.
+# wget –recursive –cut-dirs=2 –no-host-directories –no-parent –reject “index.html” http://mirror.opencompute.org/onie/
+PHONY += system-download-cache-update
+system-download-cache-update:
+	$(Q) echo "=== Adding packages from ../build/download to /var/cache/onie/download. ==="
+	$(Q) sudo mkdir -p /var/cache/onie/download 
+	$(Q) cp -vr ../build/download/* /var/cache/onie/download
+# Trim download completion files.
+	$(Q) rm -f /var/cache/onie/download/*-download
+	$(Q) echo "=== Use ONIE_USE_SYSTEM_DOWNLOAD_CACHE=TRUE to access during build. ==="
+
+
 # Run the cross ldd for the target platform
 ifeq ($(word 1, $(MAKECMDGOALS)),ldd)
   ifeq ($(LDD_TARGET),)
