Accton AS4630: single image for 54PE, 54TE, 54NPE, and 54NPEM
Signed-off-by: david_yang <david_yang@edge-core.com>
Signed-off-by: Michael Shych <michaelsh@nvidia.com>

--- a/machine/accton/accton_as4630/installer.conf
+++ b/machine/accton/accton_as4630/installer.conf
@@ -1,6 +1,6 @@
-# Accton as4630_54pe ONIE installer configuration
+# Accton as4630 ONIE installer configuration
 
-description="Accton, as4630_54pe"
+description="Accton, as4630"
 
 mass_dev="storage-not-found"
 discover_mass_storage()
