delta_ipdh4: clean code and modify information
Signed-off-by: Joe.zy.chen <JOE.ZY.CHEN@deltaww.com>

--- a/machine/delta/delta_ipdh4/installer.conf
+++ b/machine/delta/delta_ipdh4/installer.conf
@@ -1,7 +1,7 @@
-# NOKIA IXR7220_H3
-# CPU Module: Intel Atom Denverton (C3538)
+# IPDH4
+# CPU Module: Intel Ice Lake LCC (D-1714)
 
-description="IPDH4 with Intel Atom Soc Xeon (D-1714) CPU Module"
+description="IPDH4 with Intel Ice Lake LCC (D-1714) CPU Module"
 
 # Default ONIE block device
 install_device_platform()
