--- a/machine/netberg/netberg_aurora_621/kernel/config
+++ b/machine/netberg/netberg_aurora_621/kernel/config
@@ -10,9 +10,18 @@ CONFIG_USB_XHCI_PLATFORM=y
 CONFIG_USB_XHCI_HCD=y
 CONFIG_USB_XHCI_PCI=y
 
+CONFIG_ACPI_IPMI=y
 CONFIG_IPMI_HANDLER=y
+CONFIG_IPMI_PANIC_EVENT=y
+CONFIG_IPMI_PANIC_STRING=y
 CONFIG_IPMI_DEVICE_INTERFACE=y
 CONFIG_IPMI_SI=y
+# CONFIG_IPMI_SSIF is not set
+CONFIG_IPMI_WATCHDOG=y
+CONFIG_IPMI_POWEROFF=y
+# CONFIG_SENSORS_IBMAEM is not set
+# CONFIG_SENSORS_IBMPEX is not set
+
 CONFIG_USB_STORAGE=y
 CONFIG_CHR_DEV_SG=y
 
